<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/normal_100"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_1"
        android:layout_marginTop="@dimen/large_200"
        android:contentDescription="@string/cd_onboarding_image"/>

    <ImageView
        android:id="@+id/progress_dot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dot_1"
        android:layout_margin="@dimen/normal_100"
        android:contentDescription="@string/cd_progress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/normal_200">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/OnBoarding.Title"
                android:text="@string/onboard_title_1"
               />

            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/dm_sans_medium"
                android:padding="@dimen/small_100"
                android:textColor="@color/dusty_blue"
                tools:text="@string/onboard_caption_1"/>

        </LinearLayout>


        <FrameLayout
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:padding="@dimen/normal_100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="@font/dm_sans_medium"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/next"/>

        </FrameLayout>


    </LinearLayout>

</LinearLayout>
