<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeRefresh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:contentDescription="@string/cd_profile_image"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                android:paddingHorizontal="@dimen/small_150"
                android:paddingTop="@dimen/small_150"

                tools:text="@tools:sample/full_names"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title.Header"
                tools:text="@tools:sample/full_names"
                android:gravity="center_horizontal"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/allHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_150"
                    android:text="@string/planned"
                    android:textAppearance="@style/Title.Header" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLiveStreams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="10"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_live_stream"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_150"
                    android:text="@string/previous"
                    android:textAppearance="@style/Title.Header" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPlannedStreams"
                    android:layout_width="match_parent"
                    tools:listitem="@layout/item_stream"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
